--- a/src/app/components/rankedle/rankedle.component.html
+++ b/src/app/components/rankedle/rankedle.component.html
@@ -56,121 +56,10 @@
             <span class="ms-1">Classement</span>
           </div>
         </ng-template>
-        <p-table
-          [value]="rankingData"
-          [paginator]="true"
-          [rows]="10"
-          [tableStyle]="{ 'min-width': '70rem' }"
+        <app-rankedle-classement
+          [ranking]="rankingData"
           [loading]="rankingLoading"
-          [expandedRowKeys]="rankingExpandedRows"
-          (onRowExpand)="onRankingRowExpand($event)"
-          dataKey="memberId">
-          <ng-template pTemplate="header">
-            <tr>
-              <th class="w-[65px]"></th>
-              <th class="w-[80px]">#</th>
-              <th>Joueur</th>
-              <th class="w-[100px]">Points</th>
-            </tr>
-          </ng-template>
-          <ng-template pTemplate="emptymessage">
-            <tr>
-              <td colspan="5">
-                <p-messages
-                  [enableService]="false"
-                  [(value)]="noRankingMessage" />
-              </td>
-            </tr>
-          </ng-template>
-          <ng-template pTemplate="loadingbody">
-            <ng-container *ngFor="let i of [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]">
-              <tr style="height: 64px">
-                <td><p-skeleton /></td>
-                <td><p-skeleton /></td>
-                <td class="flex items-center">
-                  <p-skeleton shape="circle" size="42px" styleClass="me-4" />
-                  <p-skeleton width="10rem" />
-                </td>
-                <td><p-skeleton /></td>
-              </tr>
-            </ng-container>
-          </ng-template>
-          <ng-template pTemplate="body" let-ranking let-expanded="expanded">
-            <tr
-              style="height: 64px"
-              [ngClass]="{
-                'ranking-first': ranking.rank === 1,
-                'ranking-second': ranking.rank === 2,
-                'ranking-third': ranking.rank === 3
-              }">
-              <td>
-                <p-button
-                  type="button"
-                  [pRowToggler]="ranking"
-                  [text]="true"
-                  [rounded]="true"
-                  [plain]="true"
-                  [icon]="
-                    expanded ? 'pi pi-chevron-down' : 'pi pi-chevron-right'
-                  " />
-              </td>
-              <td>{{ ranking.rank }}</td>
-              <td class="flex items-center">
-                <p-avatar
-                  [image]="ranking.avatar"
-                  styleClass="flex me-4"
-                  size="large"
-                  shape="circle" />
-                <span>
-                  {{ ranking.name }}
-                </span>
-              </td>
-              <td>{{ ranking.points }}</td>
-            </tr>
-          </ng-template>
-          <ng-template pTemplate="rowexpansion" let-playerRanking>
-            <tr>
-              <td colspan="5" class="p-0">
-                <p-table
-                  [value]="[playerRanking.stats]"
-                  [tableStyle]="{ 'min-width': '92rem' }">
-                  <ng-template pTemplate="header">
-                    <tr>
-                      <th>Parties</th>
-                      <th>Victoires (%)</th>
-                      <th>Série actuelle</th>
-                      <th>Meilleure serie</th>
-                      <th>1<sup>ère</sup> tentative</th>
-                      <th>2<sup>ème</sup> tentative</th>
-                      <th>3<sup>ème</sup> tentative</th>
-                      <th>4<sup>ème</sup> tentative</th>
-                      <th>5<sup>ème</sup> tentative</th>
-                      <th>6<sup>ème</sup> tentative</th>
-                      <th>Défaites</th>
-                    </tr>
-                  </ng-template>
-                  <ng-template pTemplate="body" let-stats>
-                    <tr>
-                      <td>{{ stats.played }}</td>
-                      <td>
-                        {{ (stats.won * 100) / stats.played | round }}
-                      </td>
-                      <td>{{ stats.currentStreak }}</td>
-                      <td>{{ stats.maxStreak }}</td>
-                      <td>{{ stats.try1 }}</td>
-                      <td>{{ stats.try2 }}</td>
-                      <td>{{ stats.try3 }}</td>
-                      <td>{{ stats.try4 }}</td>
-                      <td>{{ stats.try5 }}</td>
-                      <td>{{ stats.try6 }}</td>
-                      <td>{{ stats.played - stats.won }}</td>
-                    </tr>
-                  </ng-template>
-                </p-table>
-              </td>
-            </tr>
-          </ng-template>
-        </p-table>
+          [rankingExpandedRows]="rankingExpandedRows" />
       </p-tabPanel>
       <!-- Statistiques -->
       <p-tabPanel>
@@ -181,176 +70,9 @@
           </div>
         </ng-template>
         <p-card styleClass="bg-transparent">
-          <ng-container
-            *ngIf="playerStats$ | withLoading | async as playerStats">
-            <div class="w-full text-center">
-              <div
-                class="grid grid-cols-[repeat(auto-fit,140px)] gap-4 justify-center mb-12">
-                <p-card
-                  styleClass="ring-1 ring-white/25 bg-white/10 rounded-md flex items-center">
-                  <div class="mb-4">Parties</div>
-                  <span class="text-3xl/none">
-                    <ng-container *ngIf="playerStats.value as stats">
-                      {{ stats.played }}
-                    </ng-container>
-                    <ng-container *ngIf="playerStats?.loading">
-                      <p-skeleton height="2rem" />
-                    </ng-container>
-                    <ng-container *ngIf="playerStats?.value === null"
-                      >0</ng-container
-                    >
-                  </span>
-                </p-card>
-                <p-card
-                  styleClass="ring-1 ring-white/25 bg-white/10 rounded-md flex items-center">
-                  <div class="mb-4">Victoires (%)</div>
-                  <span class="text-3xl/none">
-                    <ng-container *ngIf="playerStats.value as stats">
-                      {{ (stats.won * 100) / stats.played | round }}
-                    </ng-container>
-                    <ng-container *ngIf="playerStats?.loading">
-                      <p-skeleton height="2rem" />
-                    </ng-container>
-                    <ng-container *ngIf="playerStats?.value === null"
-                      >0</ng-container
-                    >
-                  </span>
-                </p-card>
-                <p-card
-                  styleClass="ring-1 ring-white/25 bg-white/10 rounded-md flex items-center">
-                  <div class="mb-4">Série actuelle</div>
-                  <span class="text-3xl/none">
-                    <ng-container *ngIf="playerStats.value as stats">
-                      {{ stats.currentStreak }}
-                    </ng-container>
-                    <ng-container *ngIf="playerStats?.loading">
-                      <p-skeleton height="2rem" />
-                    </ng-container>
-                    <ng-container *ngIf="playerStats?.value === null"
-                      >0</ng-container
-                    >
-                  </span>
-                </p-card>
-                <p-card
-                  styleClass="ring-1 ring-white/25 bg-white/10 rounded-md flex items-center">
-                  <div class="mb-4">Meilleure série</div>
-                  <span class="text-3xl/none">
-                    <ng-container *ngIf="playerStats.value as stats">
-                      {{ stats.maxStreak }}
-                    </ng-container>
-                    <ng-container *ngIf="playerStats?.loading">
-                      <p-skeleton height="2rem" />
-                    </ng-container>
-                    <ng-container *ngIf="playerStats?.value === null"
-                      >0</ng-container
-                    >
-                  </span>
-                </p-card>
-              </div>
-
-              <div class="max-w-fit m-auto">
-                <h3>Performances</h3>
-                <div
-                  class="grid grid-cols-[repeat(7,28px)] grid-rows-[180px_auto] gap-x-5 gap-y-2 justify-center justify-items-center">
-                  <!-- Bars -->
-                  <ng-container *ngIf="playerStats.value as stats">
-                    <div
-                      class="stats-progress-bar stats-progress-bar-1"
-                      [style]="{
-                        height: (stats.try1 * 100) / stats.played + '%'
-                      }">
-                      {{ stats.try1 }}
-                    </div>
-                    <div
-                      class="stats-progress-bar stats-progress-bar-2"
-                      [style]="{
-                        height: (stats.try2 * 100) / stats.played + '%'
-                      }">
-                      {{ stats.try2 }}
-                    </div>
-                    <div
-                      class="stats-progress-bar stats-progress-bar-3"
-                      [style]="{
-                        height: (stats.try3 * 100) / stats.played + '%'
-                      }">
-                      {{ stats.try3 }}
-                    </div>
-                    <div
-                      class="stats-progress-bar stats-progress-bar-4"
-                      [style]="{
-                        height: (stats.try4 * 100) / stats.played + '%'
-                      }">
-                      {{ stats.try4 }}
-                    </div>
-                    <div
-                      class="stats-progress-bar stats-progress-bar-5"
-                      [style]="{
-                        height: (stats.try5 * 100) / stats.played + '%'
-                      }">
-                      {{ stats.try5 }}
-                    </div>
-                    <div
-                      class="stats-progress-bar stats-progress-bar-6"
-                      [style]="{
-                        height: (stats.try6 * 100) / stats.played + '%'
-                      }">
-                      {{ stats.try6 }}
-                    </div>
-                    <div
-                      class="stats-progress-bar stats-progress-bar-7"
-                      [style]="{
-                        height:
-                          ((stats.played - stats.won) * 100) / stats.played +
-                          '%'
-                      }">
-                      {{ stats.played - stats.won }}
-                    </div>
-                  </ng-container>
-                  <ng-container *ngIf="playerStats?.loading">
-                    <ng-container *ngFor="let i of [0, 1, 2, 3, 4, 5, 6]">
-                      <p-skeleton class="w-full" height="100%" />
-                    </ng-container>
-                  </ng-container>
-                  <ng-container *ngIf="playerStats?.value === null">
-                    <ng-container *ngFor="let i of [0, 1, 2, 3, 4, 5, 6]">
-                      <div
-                        [class]="
-                          'stats-progress-bar stats-progress-bar-' + (i + 1)
-                        ">
-                        0
-                      </div>
-                    </ng-container>
-                  </ng-container>
-                  <!-- Tries -->
-                  <ng-container *ngFor="let i of [0, 1, 2, 3, 4, 5]">
-                    <span class="self-center place-self-center">{{
-                      i + 1
-                    }}</span>
-                  </ng-container>
-                  <span class="self-center flex items-center">
-                    <svg
-                      xmlns="http://www.w3.org/2000/svg"
-                      width="20"
-                      height="20"
-                      viewBox="0 0 24 24"
-                      stroke-width="2"
-                      stroke="#ffffff"
-                      fill="none"
-                      stroke-linecap="round"
-                      stroke-linejoin="round">
-                      <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                      <path
-                        d="M12 4c4.418 0 8 3.358 8 7.5c0 1.901 -.755 3.637 -2 4.96l0 2.54a1 1 0 0 1 -1 1h-10a1 1 0 0 1 -1 -1v-2.54c-1.245 -1.322 -2 -3.058 -2 -4.96c0 -4.142 3.582 -7.5 8 -7.5z"></path>
-                      <path d="M10 17v3"></path>
-                      <path d="M14 17v3"></path>
-                      <path d="M9 11m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0"></path>
-                      <path d="M15 11m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0"></path>
-                    </svg>
-                  </span>
-                </div>
-              </div>
-            </div>
-          </ng-container>
+          <app-rankedle-statistiques
+            [stats]="playerStatsData"
+            [loading]="playerStatsLoading" />
         </p-card>
       </p-tabPanel>
       <!-- Historique -->
@@ -361,84 +83,12 @@
             <span class="ms-1">Historique</span>
           </div>
         </ng-template>
-        <p-table
-          [value]="historyData"
-          [paginator]="true"
-          [rows]="10"
+        <app-rankedle-historique
+          [history]="historyData"
           [first]="historyFirst"
-          [lazy]="true"
-          [totalRecords]="historyTotal"
-          [tableStyle]="{ 'min-width': '70rem' }"
+          [total]="historyTotal"
           [loading]="historyLoading"
-          (onPage)="historyPageChange($event)"
-          dataKey="history.id">
-          <ng-template pTemplate="header">
-            <tr>
-              <th class="w-[80px]">#</th>
-              <th>Map</th>
-              <th class="w-[200px]">Mapper</th>
-              <th class="w-[160px]">Score</th>
-              <th class="w-[120px]">Date</th>
-            </tr>
-          </ng-template>
-          <ng-template pTemplate="emptymessage">
-            <tr>
-              <td colspan="5">
-                <p-messages
-                  [enableService]="false"
-                  [(value)]="noHistoryMessage" />
-              </td>
-            </tr>
-          </ng-template>
-          <ng-template pTemplate="loadingbody">
-            <ng-container *ngFor="let i of [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]">
-              <tr style="height: 64px">
-                <td><p-skeleton /></td>
-                <td class="flex items-center">
-                  <p-skeleton size="42px" styleClass="me-4" />
-                  <p-skeleton width="30rem" />
-                </td>
-                <td ><p-skeleton /></td>
-                <td ><p-skeleton /></td>
-                <td ><p-skeleton /></td>
-              </tr>
-            </ng-container>
-          </ng-template>
-          <ng-template pTemplate="body" let-history>
-            <tr>
-              <td>{{ history.id }}</td>
-              <td class="flex items-center">
-                <p-avatar
-                  [image]="history.cover"
-                  styleClass="flex me-4 rounded-md overflow-hidden"
-                  size="large" />
-                <span class="text-ellipsis whitespace-nowrap overflow-hidden">
-                  {{ history.songName }}
-                </span>
-              </td>
-              <td class="text-ellipsis whitespace-nowrap overflow-hidden">
-                {{ history.levelAuthorName }}
-              </td>
-              <td>
-                <ng-container *ngIf="history.score as score">
-                  <div class="flex gap-x-1">
-                    <ng-container *ngFor="let step of score.steps">
-                      <span
-                        class="pi pi-circle-fill"
-                        [ngClass]="{
-                          'step-skip': step === 'skip',
-                          'step-fail': step === 'fail',
-                          'step-success': step === 'success',
-                          'step-empty': step === null
-                        }"></span>
-                    </ng-container>
-                  </div>
-                </ng-container>
-              </td>
-              <td>{{ history.date }}</td>
-            </tr>
-          </ng-template>
-        </p-table>
+          (onPage)="historyPageChange($event)" />
       </p-tabPanel>
       <!-- Aide -->
       <p-tabPanel>
@@ -449,47 +99,7 @@
           </div>
         </ng-template>
         <p-card styleClass="bg-transparent">
-          <h3 class="mt-0">Comment jouer ?</h3>
-          <ul>
-            <li>
-              Écoutez l'extrait audio, puis recherchez le titre correspondant
-              dans la liste
-            </li>
-            <li>
-              Si vous passez ou entrez un titre incorrect, cela étandra la durée
-              de l'extrait audio
-            </li>
-            <li>
-              Vous avez un total de 6 tentatives pour parvenir à trouver le bon
-              titre
-            </li>
-            <li>
-              Vous gagnez des points si vous parvenez à trouver le bon titre :
-            </li>
-          </ul>
-
-          <p-table [value]="[[]]" [tableStyle]="{ 'min-width': '60rem' }">
-            <ng-template pTemplate="header">
-              <tr>
-                <th>1<sup>ère</sup> tentative</th>
-                <th>2<sup>ème</sup> tentative</th>
-                <th>3<sup>ème</sup> tentative</th>
-                <th>4<sup>ème</sup> tentative</th>
-                <th>5<sup>ème</sup> tentative</th>
-                <th>6<sup>ème</sup> tentative</th>
-              </tr>
-            </ng-template>
-            <ng-template pTemplate="body">
-              <tr>
-                <td>8 points</td>
-                <td>6 points</td>
-                <td>4 points</td>
-                <td>3 points</td>
-                <td>2 points</td>
-                <td>1 point</td>
-              </tr>
-            </ng-template>
-          </p-table>
+          <app-rankedle-aide />
         </p-card>
       </p-tabPanel>
     </p-tabView>
