--- a/src/app/components/carte-interactive/carte-interactive.component.html
+++ b/src/app/components/carte-interactive/carte-interactive.component.html
@@ -9,14 +9,10 @@
     header="Localisation des membres de BSFR"
     styleClass="rounded-md bg-black/30 backdrop-blur-[64px] shadow-lg ring-1 ring-white/10">
     <p-messages
+      [value]="helpMessage"
       [enableService]="false"
-      closable="false"
-      severity="info"
+      escape="false"
       styleClass="mb-6">
-      <ng-template pTemplate>
-        Utilisez la commande /ville dans le salon #rôles-auto-assignable afin
-        d'apparaître sur la carte.
-      </ng-template>
     </p-messages>
     <div
       style="height: 600px; outline: none"
