--- a/src/app/components/profil/profil.component.html
+++ b/src/app/components/profil/profil.component.html
@@ -3,7 +3,57 @@
   <div class="text-white">
     <h2>Mon profil</h2>
   </div>
-  <p-card
-    styleClass="rounded-md bg-black/30 backdrop-blur-[64px] shadow-lg ring-1 ring-white/10">
-  </p-card>
+  <!-- <app-not-bsfr-member *ngIf="!isBSFR; else page" />
+  <ng-template #page> -->
+  <div
+    class="rounded-md bg-black/30 backdrop-blur-[64px] shadow-lg ring-1 ring-white/10">
+    <p-tabView
+      [(activeIndex)]="activeTab"
+      [scrollable]="true"
+      (onChange)="onTabChange($event)">
+      <!-- Jeu -->
+      <p-tabPanel>
+        <ng-template pTemplate="header">
+          <span class="whitespace-nowrap">Anniversaire</span>
+        </ng-template>
+        <app-profil-anniversaire
+          [birthDate]="birthDate"
+          [loading]="birthdayLoading" />
+      </p-tabPanel>
+      <p-tabPanel>
+        <ng-template pTemplate="header">
+          <span class="whitespace-nowrap">Rôles</span>
+        </ng-template>
+        <app-profil-roles
+          [roles]="roles"
+          [selectedSingle]="rolesSelectedSingle"
+          [selectedMultiple]="rolesSelectedMultiple"
+          [loading]="rolesLoading" />
+      </p-tabPanel>
+      <p-tabPanel>
+        <ng-template pTemplate="header">
+          <span class="whitespace-nowrap">Ville</span>
+        </ng-template>
+        <app-profil-ville [city]="city" [loading]="cityLoading" />
+      </p-tabPanel>
+      <p-tabPanel>
+        <ng-template pTemplate="header">
+          <span class="whitespace-nowrap">Twitch</span>
+        </ng-template>
+      </p-tabPanel>
+      <p-tabPanel>
+        <ng-template pTemplate="header">
+          <div class="flex items-center">
+            <img
+              src="/images/nitro.png"
+              width="17px"
+              height="17px"
+              class="me-3" />
+            <span class="whitespace-nowrap">Image de carte Cube-Stalker</span>
+          </div>
+        </ng-template>
+      </p-tabPanel>
+    </p-tabView>
+  </div>
+  <!-- </ng-template> -->
 </div>
